day2/src/.metals/metals.log
[0m2021.12.03 14:14:49 INFO  Started: Metals version 0.10.9 in workspace '/home/ed/Documents/AoF2021/day2/src' for client Visual Studio Code 1.62.3.[0m
[0m2021.12.03 14:14:51 INFO  time: initialize in 1.19s[0m
[0m2021.12.03 14:14:51 WARN  Build server is not auto-connectable.[0m
[0m2021.12.03 14:14:51 WARN  no build target for: /home/ed/Documents/AoF2021/day2/src/main/scala/Main.scala[0m
[0m2021.12.03 14:14:54 INFO  no build target: using presentation compiler with only scala-library: 3.1.0[0m
[0m2021.12.03 14:14:58 INFO  time: code lens generation in 6.41s[0m
[0m2021.12.03 14:15:09 WARN  no build target for: /home/ed/Documents/AoF2021/day2/src/main/scala/Main.scala[0m
[0m2021.12.03 14:15:16 WARN  no build target for: /home/ed/Documents/AoF2021/day2/src/main/scala/Main.scala[0m
Default dialect is deprecated; use explicit: [Scala211,scala212,Scala212Source3,scala213,Scala213Source3,Sbt0137,Sbt1,scala3]
Also see https://scalameta.org/scalafmt/docs/configuration.html#scala-dialects"
[0m2021.12.03 14:15:21 ERROR scalafmt: /home/ed/Documents/AoF2021/day2/src/main/scala/Main.scala:4: error: [dialect default] expected class or object definition def
def makeInt(s: String): Option[Int] = allCatch.opt(s.toInt)
^[0m
[0m2021.12.03 14:15:21 WARN  no build target for: /home/ed/Documents/AoF2021/day2/src/main/scala/Main.scala[0m
